# TaskManagerWebDav

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  app_description.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-pages.yml  publish-container.yml  publish-desktop.yml  publish-python-desktop.yml
TaskManagerNative/: Package.swift  README.md
TaskManagerNative/Sources/TaskManagerNative/App/: TaskManagerApp.swift
TaskManagerNative/Sources/TaskManagerNative/Models/: Models.swift
TaskManagerNative/Sources/TaskManagerNative/Networking/: CalDAVClient.swift  ICalendarParser.swift  ICalendarSerializer.swift
TaskManagerNative/Sources/TaskManagerNative/Services/: FilterService.swift  NotificationService.swift  SyncService.swift
desktop_python/: README.md  pyinstaller.spec  pyproject.toml
desktop_python/taskmanager_desktop/: __main__.py  app.py  caldav.py  filters.py  keychain.py  models.py  storage.py
desktop_python/taskmanager_desktop/ui/: main_window.py
docker/nginx/: caldav.conf
docker/radicale/: config
electron/: main.mjs  notarize.mjs  preload.mjs
proxy/: server.mjs  test-auth.mjs
public/: manifest.webmanifest  sw.js
scripts/: clear-cirrux-calendars.sh  generate-sw.mjs  migrate-task-ids-to-collection-scope.mjs  test-cirrux-lists-folders.sh
src/: App.css  App.tsx  index.css  main.tsx  modules.d.ts  types.ts  vite-env.d.ts
src/lib/: caldav.ts  filters.ts  idb.ts  ids.ts  notifications.ts  pwa.ts  task-ids.ts
(+10 files in other folders)
