[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanager-desktop"
version = "0.1.0"
description = "Native PySide6 desktop client for TaskManagerWebDav"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8",
  "httpx>=0.28",
  "keyring>=25.6",
]

[project.scripts]
taskmanager-desktop = "taskmanager_desktop.__main__:main"

[tool.setuptools]
packages = ["taskmanager_desktop", "taskmanager_desktop.ui"]
